--- a/Versality/appsettings.json
+++ b/Versality/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VersalityContext": "server=localhost;userid=root;password=10030201Fe@!;database=versalityappdb"
+  }
 }
